<resources>
    <string name="app_name">Untitled Android Project</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_check">Re-enter password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_account_creation">Create an account</string>
    <string name="prompt_lastname">Last name</string>
    <string name="prompt_firstname">First name</string>
    <string name="prompt_birthday">Birthday</string>
    <string name="man">Man 👨</string>
    <string name="woman">Woman 👩</string>
    <string name="other_gender">Non-binary 🌈</string>
    <string name="prompt_gender">Gender</string>
    <string name="director">Directed by:</string>
    <string name="wikiUrl">wikipedia:</string>
    <string name="ReleaseYear">Released on</string>
    <string name="movieImageDescription">Poster of the movie</string>
    <string name="movieContentInstruction">Click on an image to see more information!</string>
    <string name="presentation">This application is meant to give you a list of movies featuring cats! 🐱</string>
    <string name="author">Made by Antoine Ganne for the Android Dev course of Polytech Lyon.</string>
    <string name="logo_img_desc">logo of the app</string>
    <string name="ok">OK!</string>

    <string-array name="country_list">
        <item>France</item>
        <item>Switzerland</item>
        <item>Vatican</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
